# mandelbrot_set

./: .gitignore  Mandelbrot Set.sln
Mandelbrot Set/: Mandelbrot Set.cpp  pch.h
Mandelbrot_Set/: ComplexNumbers.cpp  ComplexNumbers.h  Mandelbrot Set.vcxproj  Mandelbrot Set.vcxproj.filters  Mandelbrot_Set.cpp  pch.h
linux/: CMakeLists.txt
vita/: CMakeLists.txt
